project/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "sandbox"
  labels:
    name: "sandbox"
