project/kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: techtrends
  name: techtrends
  namespace: sandbox 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techtrends
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: techtrends
    spec:
      containers:
      - image: leehc114/techtrends:latest
        ports:
          - containerPort: 3111
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3111
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3111
          initialDelaySeconds: 5
          periodSeconds: 5
        imagePullPolicy: IfNotPresent
        name: techtrends
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi
