project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techtrends
spec:
  # type: NodePort
  type: ClusterIP

  selector:
    app: techtrends
  ports:
    - protocol: TCP
      port: 4111
      targetPort: 3111
      # nodePort: 30000



# apiVersion: v1
# kind: Service
# metadata:
#   name: devops-toolkit
#   labels:
#     app: devops-toolkit
# spec:
#   type: ClusterIP
#   ports:
#   - port: 80
#     targetPort: 80
#     protocol: TCP
#     name: http
#   selector:
#     app: devops-toolkit
