project/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techtrends
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # defaultBackend:
  #   service:
  #     name: techtrends
  #     port:
  #       number: 4111
  rules:
  - http:
      paths:
      - path: /temp
        pathType: Prefix
        backend:
          service:
            name: techtrends
            port:
              number: 4111
      - path: /
        pathType: Prefix
        backend:
          service:
            name: techtrends
            port:
              number: 4111
